# hexx

./: Cargo.toml
benches/: storage.rs
src/: bounds.rs  layout.rs  lib.rs  orientation.rs  shapes.rs
src/direction/: edge_direction.rs  vertex_direction.rs
src/hex/: mod.rs
src/hex/grid/: edge.rs  vertex.rs
src/mesh/: column_builder.rs  mod.rs  plane_builder.rs  uv_mapping.rs
src/storage/: hexagonal.rs  hexmod.rs  mod.rs  rombus.rs
