[package]
name = "hexx"
version = "0.17.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Hexagonal utilities"
license = "Apache-2.0"
keywords = ["hexagon", "bestagon", "bevy", "geometry"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/hexx"
exclude = [".github"]
resolver = "2"

[features]
default = ["algorithms", "mesh", "grid"]
# HL algoritms
algorithms = []
# 3d Mesh features
mesh = ["serde?/std"]
# Grid management utilities
grid = []
# repr C
packed = []
# serde compatibility
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam = "0.27.0"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[dev-dependencies]
rand = "0.8"
approx = "0.5"

[[bench]]
name = "length"
harness = false

[[bench]]
name = "wedges"
harness = false

[[bench]]
name = "lines"
harness = false

[[bench]]
name = "rings"
harness = false

[[bench]]
name = "storage"
harness = false

[profile.dev]
opt-level = 1
