[package]
name = "hexx"
version = "0.22.0"
edition = "2024"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Hexagonal utilities"
license = "Apache-2.0"
keywords = ["hexagon", "bestagon", "geometry"]
categories = ["game-development", "mathematics", "graphics", "data-structures"]
repository = "https://github.com/ManevilleF/hexx"
exclude = [".github"]
resolver = "3"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["algorithms", "mesh", "grid"]
# HL algoritms
algorithms = []
# 3d Mesh features
mesh = ["serde?/std"]
# Grid management utilities
grid = []
# repr C
packed = []
# serde compatibility
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam = "0.30"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[dev-dependencies]
rand = "0.9"
approx = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }

[[bench]]
name = "length"
harness = false

[[bench]]
name = "wedges"
harness = false

[[bench]]
name = "lines"
harness = false

[[bench]]
name = "rings"
harness = false

[profile.dev]
opt-level = 1
